# config-it-rs

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  LICENSE  README.md  TODO.md  setup.bat  setup.sh
backends/web/: Cargo.toml
backends/web/src/: actor.rs  api.rs  lib.rs  monitor.rs  service.rs
backends/web/src/runner/: api.rs  mod.rs
backends/web/src/service/: mod.rs  public_path.rs
backends/web/src/trace/: detail.rs
backends/web/tests/: test_app.rs
backends/web/tests/common/: mod.rs
config-it/: CHANGES.md  Cargo.toml  README.md
config-it-access/: Cargo.toml  README.md  TODO.md
config-it-access/client/: .gitignore  Cargo.toml  Dioxus.toml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
config-it-access/client/public/: tailwind.css
config-it-access/client/src/: App.tsx  Home.tsx  Hooks.tsx  LoginPage.tsx  Management.tsx  Widgets.tsx  main.rs
config-it-access/relay/: Cargo.toml
config-it-access/relay/.cargo/: config.toml
config-it-access/relay/bindings/: LoginReply.ts
config-it-access/relay/src/: api.rs  apitool.rs  lib.rs  main.rs
config-it-access/relay/src/ddl/: Sys.ddl  user.ddl
config-it-access/shared/: Cargo.toml
config-it-access/source/: Cargo.toml
config-it-macros/: Cargo.toml
config-it-macros-impl/: Cargo.toml
config-it-macros-impl/src/: lib.rs  utils
config-it-macros-impl/src/utils/: mod.rs  parsing.rs
config-it-macros/src/: lib.rs  parsing.rs
config-it-macros/src/utils/: mod.rs  parsing.rs
config-it-monitor/collect-it/: .gitignore  Cargo.toml  build.rs  lib.rs  mod.rs  protocol.fbs
config-it-monitor/collect-it/protocol/: auth_entity_generated.rs  collector_registration_generated.rs  mod.rs
config-it-monitor/dashboard/: Cargo.toml  Trunk.toml  index.html
config-it-monitor/dashboard/assets/: sw.js:Zone.Identifier
config-it-monitor/dashboard/src/: app.rs  common.rs  lib.rs  main.rs  session.rs  tabs.rs
config-it-monitor/dashboard/src/session/: sys_view.rs
config-it-monitor/monitor/: Cargo.toml  common.rs  lib.rs  server.rs  session.rs
config-it-monitor/monitor/examples/: sample-app.rs
config-it/examples/: test.rs
config-it/src/: archive.rs  backend.rs  common.rs  config.rs  core.rs  entity.rs  lib.rs  monitor.rs  noti.rs  storage.rs  storage_backend.rs  storage_core.rs
config-it/src/beacon/: entity.rs  group.rs  mod.rs  noti.rs  storage.rs
config-it/src/core/: meta.rs
config-it/tests/: api.rs  cases.rs  macro-defaults.rs  macro.rs  storage-api.rs
config-it/tests-tmp/: cases.rs
core_features/: Cargo.toml
core_features/src/: config.rs  lib.rs  terminal.rs
docs/: design.drawio
perfkit-core/: Cargo.toml
perfkit-core/src/: config.rs  lib.rs
perfkit-examples/: Cargo.toml
perfkit-examples/src/: main.rs
perfkit_config/: Cargo.toml
perfkit_config/src/: back.rs  entity.rs  front.rs  lib.rs  registry.rs  storage.rs
perfkit_config_macros/: Cargo.toml
perfkit_config_macros/src/: lib.rs  parsing.rs
perfkit_config_macros_internal/: Cargo.toml
perfkit_config_macros_internal/src/: gen.rs  lib.rs  parsing.rs
perfkit_graphics/: Cargo.toml
perfkit_terminal/: Cargo.toml
perfkit_trace/: Cargo.toml
trace-it/: Cargo.toml
trace-it/src/: lib.rs
usages/: Cargo.toml
usages/src/: main.rs
