[package]
name = "config-it-macros-impl"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
proc-macro2 = { version = "1.0" }
quote = "1.0"
syn = "1.0"


[features]
default = ["is_proc_macro_impl"]
derive = []
is_proc_macro_impl = []
