[package]
name = "config-it-macros"
version = "0.0.1"
edition = "2021"
authors = ["kang-sw <ki6080@gmail.com>"]
categories = ["config"]
repository = "https://github.com/kang-sw/config-it-rs"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1.0"
syn = { version = "1" }
