[package]
name = "config-it-macros"
version = "0.4.0"
edition = "2021"
authors = ["kang-sw <ki6080@gmail.com>"]
categories = ["config"]
repository = "https://github.com/kang-sw/config-it-rs"
license = "MIT"
description = "Implements derive macro for config-it"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1" }
proc-macro-crate = "1"

[features]
default = ["more_attr", "nocfg"]
more_attr = []
nocfg = []
