[package]
name = "config-it"
version = "0.8.0"
edition = "2021"
description = "Centralized dynamic configuration management"
authors = ["kang-sw <ki6080@gmail.com>"]
categories = ["config"]
repository = "https://github.com/kang-sw/config-it-rs"
keywords = ["config"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { package = "config-it-macros", path = "../config-it-macros", version = "0.4.0" }

serde = { version = "1", features = ["derive"] }
erased-serde = "0.3"

serde_json = "1"
thiserror = "1"

flume = "0.11"

oneshot = "0.1"
log = "0.4"

smallvec = { version = "1", features = ["serde", "write", "union"] }
compact_str = { version = "0.7", features = ["serde"] }

derive_more = "0.99"

lazy_static = "1"
parking_lot = "0"
schemars = { version = "0.8.12", features = ["preserve_order"] }
indexmap = { version = "2.0.0", features = ["serde"], optional = true }
arc-swap = "1.6.0"
dashmap = "5.5.3"

[dev-dependencies]
futures = "0.3"
serde_yaml = "0"
indoc = "2"
tokio = { version = "1", features = ["full"] }

[features]
default = ["nocfg", "indexmap"]
nocfg = ["macros/nocfg"]
indexmap = ["dep:indexmap"]
