[package]
name = "web"
version = "0.1.0"
edition = "2021"
exclude = ["front"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config-it = { path = "../../config-it", version = "0.0.5" }
serde = { version = "1", features = ["derive"] }
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
rand = "*"
async-channel = "1"
log = "0.4"
whoami = "1"
futures = "0.3"
serde_json = "1"

[dev-dependencies]
dotenv = "0.15"
