[package]
name = "config-it-web-dashboard"
version = "0.1.1"
edition = "2021"
exclude = ["front"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config-it = { path = "../../config-it", version = "0.1" }

serde = { version = "1", features = ["derive"] }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.6", features = ["ws"] }
async-channel = "1"
futures = "0.3"

log = "0.4"

rand = "*"
whoami = "1"
serde_json = "1"
gethostname = "*"

tracing = "0.1"
trace-it = { path = "../../trace-it" }

[dev-dependencies]
dotenvy = "0"
