[package]
name = "config-it-access-relay-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
clap = { version = "4.3.5", features = ["derive", "env", "wrap_help"] }
lazy_static = "1.4.0"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
