[package]
name = "config-it-access-relay-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
axum = { version = "0.6.18", features = ["headers", "http2"] }
axum-extra = { version = "0.7.4", features = ["cookie-signed"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
capture-it = "0.4.1"
clap = { version = "4.3.5", features = ["derive", "env", "wrap_help"] }
compact_str = { version = "0.7.1", features = ["serde"] }
dashmap = "5.4.0"
env = "0.0.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1.37"
tracing-appender = { version = "0.2.2", features = ["parking_lot"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.3.4", features = ["v4"] }
