[package]
name = "config-it-access-relay-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
axum = { version = "0.6.18", features = ["headers", "http2"] }
axum-extra = { version = "0.7.4", features = ["cookie-signed"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
bitflags = "2.3.2"
capture-it = "0.4.1"
clap = { version = "4.3.5", features = ["derive", "env", "wrap_help"] }
compact_str = { version = "0.7.1", features = ["serde"] }
dashmap = "5.4.0"
dunce = "1.0.4"
env = "0.0.0"
indexmap = "2.0.0"
indoc = "2.0.1"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
sha256 = "1.1.4"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1.37"
tracing-appender = { version = "0.2.2", features = ["parking_lot"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
ts-rs = "6.2.1"
uuid = { version = "1.3.4", features = ["v4"] }
