[package]
name = "config-it-monitor"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies.config-it]
version = "0.5"
path = "../../config-it"

[dependencies]
typed-builder = "0.14"

tracing = "0.1"
tracing-subscriber = "0.3"

log = "^0.4"

derive-getters = "0.2"

futures = "0.3"
tokio = "^1.25"

custom_debug = "0.5"

sha2 = "0.10"
rpc-it = { version = "0.3.2", path = "../rpc-it-rs" }

thiserror = "1.0"
anyhow = "^1.0.70"

serde = { version = "^1.0.157", features = ["derive"] }
serde_json = "^1.0.94"
base64-serde = "0.7.0"
base64 = "0.21"

hostname = "0.3.1"

# TODO: optional dashboard dependency, to embed built artifact of WASM ...

[dependencies.axum]
version = "0.6"
features = ["ws"]

[dev-dependencies]
capture-it = "0.2"
